--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Calculadora de RM</title>
 </head>
 <body>  <!--Formulario-->
-  <h1>Rmax (estimacion indirecta metodo Wilday - epply)</h1>
+  <h1>Rmax (estimación indirecta metodo Wilday - epply)</h1>
   <form>
     <label for="usuario">Usuario:</label>
     <input type="text" id="usuario" name="usuario"><br><br>
@@ -49,7 +49,7 @@
     </tr>
   </table>
 
-  <h2>Método De Oxford</h2>
+  <h2>Método de Oxford</h2>
   <table id="tabla-Oxford">
     <tr>
       <th>1ra Serie (kg)</th>
@@ -58,7 +58,7 @@
     </tr>
   </table>
 
-  <h2>Método Dotte</h2>
+  <h2>Método de Dotte</h2>
   <table id="tabla-Dotte">
     <tr>
       <th>1ra Serie (kg)</th>
@@ -77,7 +77,7 @@
     </tr>
   </table>
 
-  <h2>Método McQueen</h2>
+  <h2>Método de McQueen</h2>
   <table id="tabla-McQueen">
     <tr>
       <th>1ra Serie (kg)</th>
@@ -86,7 +86,7 @@
     </tr>
   </table>
 
-  <h2>Método Zinovieff</h2>
+  <h2>Método de Zinovieff</h2>
   <table id="tabla-Zinovieff">
     <tr>
       <th>1ra Serie (kg)</th>
